--- a/.github/workflows/s3-sync.yml
+++ b/.github/workflows/s3-sync.yml
@@ -24,4 +24,4 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-southeast-1
-      - run: aws s3 sync "${{ env.SOURCE_DIR }}" "s3://${{ secrets.S3_BUCKET }}/${{ env.DEST_PREFIX }}/images" --delete
+      - run: aws s3 sync "${{ env.SOURCE_DIR }}" "s3://${{ secrets.S3_BUCKET }}/${{ env.DEST_PREFIX }}" --delete
